Fix small copy and spacing here and there

--- a/food-now/App.scss
+++ b/food-now/App.scss
@@ -104,8 +104,12 @@
 				.body {
 					display: flex;
 					flex-direction: column;
-					gap: 8px;
 					padding: 0 48px;
+					align-items: center;
+
+					.custom-slider {
+						width: 100%;
+					}
 				}
 			}
 		}
