--- a/food-now/components/price/Price.scss
+++ b/food-now/components/price/Price.scss
@@ -2,6 +2,7 @@
 
 .range-body {
 	// TODO: Range component's thumbs can exceed width of container, pls fix
+	margin-bottom: 12px;
 
 	.range-label {
 		padding-bottom: 8px;
